# bjl-stale

./: .cirrus.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: stale-tidy.yml  stale.yml
requirements/: py39.yml
stale/tests/: test_stale.py
