[metadata]
name = stale
author = bjlittle 
classifiers = 
    Development Status :: 1 - Planning 
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = BSD 3-Clause
license_file = LICENSE
description = A stale repo waiting to go moldy 
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Code = https://github.com/bjlittle/stale
    Issues = https://github.com/bjlittle/stale/issues
url = https://github.com/bjlittle/stale

[options]
packages = find:
zip_safe = True 
python_requires = >=3.9
install_requires =
    numpy

[options.extras_require]
lint =
    black==21.5b0
    flake8==3.9.2
    isort==5.8.0
dev =
    pre-commit
    pytest
release =
    twine

[tool:pytest]
testpaths =
    stale/
addopts =
    -ra
    -v
    --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER
